syntax = "proto3";

import "SolidityTypes.proto";
import "IssuanceData.proto";

/**
 * Represents the input parameters from makers in
 * creating new swap issuance.
 */
message SpotSwapMakerParameters {
  .solidity.address inputTokenAddress = 1;
  .solidity.address outputTokenAddress = 2;
  .solidity.uint256 inputAmount = 3;
  .solidity.uint256 outputAmount = 4;
  .solidity.uint256 duration = 5;
}

/**
 * Represents the properties about he swap spot issuance.
 */
message SpotSwapProperties {
  .solidity.address inputTokenAddress = 1;
  .solidity.address outputTokenAddress = 2;
  .solidity.uint256 inputAmount = 3;
  .solidity.uint256 outputAmount = 4;
  .solidity.uint256 duration = 5;
}

/**
 * Represents all properties about the spot swap issuance.
 */
 message SpotSwapCompleteProperties {
  IssuanceProperties issuanceProperties = 1;
  SpotSwapProperties spotSwapProperties = 2;
}