syntax = "proto3";

import "SolidityTypes.proto";

/**
 * Represent a single token transfer action triggerred from issuance.
 * As it's triggered from Instrument, the transfer is either from Issuance Escrow
 * to Instrument Escrow, or inside the same Issuance Escrow. 
 */
message Transfer {
    // Whether it's an outbound transfer.
    // If true, the transfer is from Issuance Escrow to Instrument Escrow.
    bool outbound = 1;
    // Whether it's an inbound transfer.
    // If true, the transfer is from Instrument Escrow to Issuance Escrow.
    bool inbound = 2;
    // Where the token is transferred from.
    .solidity.address fromAddress = 3;
    // Where the token is transferred to.
    .solidity.address toAddress = 4;
    .solidity.address tokenAddress = 5;
    .solidity.uint256 amount = 6;
}

/**
 * Represents a series of token transfer actions.
 * Unlike Token Balance, two Transfer actions might have the same token address.
 */
message Transfers {
    repeated Transfer actions = 1;
}
